fixtures/name-resolution/negative/unresolved_name.cos
/// diag(error, 3:3): cosmo0.type.unresolved-name
def main(): i32 = {
  missing
}
